# computer-graphics-experiment

./: .gitignore  CMakeLists.txt  README.md  fs.glsl  main.cpp  template.cpp  test.cpp  test.h  testfs.glsl  testvs.glsl  vs.glsl
assimp/include/assimp/: material.h  texture.h
glad/src/: glad.c
glm/ext/: matrix_integer.inl  vector_common.inl
include/: Camera.h  shader.h  stb_image.h
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glm/: CMakeLists.txt
include/glm/ext/: matrix_integer.hpp
lib/: glad.c
shadersrc/: fs.glsl
src/: CMakeLists.txt
src/assimp-demo/: CMakeLists.txt  Mesh.h  Model.h  assimp_demo.cpp
src/ex1/: CMakeLists.txt  ex1.cpp
src/ex2/: CMakeLists.txt  ex2.cpp
src/ex3/: CMakeLists.txt  CohenSutherlandClip.h  SutherlandHodgeman.cpp  SutherlandHodgeman.h  ex3.cpp
src/ex4/: CMakeLists.txt  ex4.cpp
src/ex5/: CMakeLists.txt  ex5.cpp
